# SWXPS_code

./: .gitignore  AGENTS.md  PLAN.md  PLANS.md  README.md  XR_REFLECTIVITY_PLAN.md  pyproject.toml
Yeh_Lindau_1985_Xsection_CSV_Database/: 49_In.csv  55_Cs.csv
archive/: README.md
benchmarks/: README.md
case_studies/: README.md
docs/: PROJECT_STATE.md  TODO.md  architecture.md  projectspec_reference.md  roadmap.md  user_guide.md
examples/: README.md  compare_lno_sto_concentration_profiles.py  compare_lno_sto_roughness.py  compare_lno_sto_roughness_profiles.py  plot_lno_la4d_rocking_curve.py  plot_lno_sto_field_profile.py  plot_lno_sto_reflectivity.py  plot_lno_sto_stack_profile.py  plot_lno_sto_top100_offpeak_fields.py  synthetic_case.py
runs/: README.md
scripts/: run_jax_gradient_fit.py  run_jax_least_squares_fit.py
templates/: project_minimal.yaml  run_project.py
tests/: test_api_freeze.py  test_bo.py  test_diagnostics.py  test_diagnostics_covariance_validation.py  test_diagnostics_plot_layout.py  test_diagnostics_plotting.py  test_fields.py  test_fit_diagnostics.py  test_fitting.py  test_imfp.py  test_io_curves.py  test_io_imfp.py  test_io_material_builders.py  test_io_optical_constants.py  test_jax_compilation_counter.py  test_jax_forward.py  test_jax_gradient.py  test_jax_least_squares.py  test_namespace_imports.py  test_optical_constants.py  test_package_layout.py  test_polarization.py  test_preprocessing.py  test_profiles.py  test_project_workflow.py  test_reflectivity.py  test_reflectivity_jax.py  test_sample13_fixed_grid_jax_runner.py  test_simulation.py  test_simulation_jax.py  test_simulation_slicing_defaults.py  test_slicing.py  test_stack_builders.py  test_stack_visualization.py  test_stage4_xps_locations.py  (+12 more)
(+305 files in other folders)
