[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swxps"
version = "0.1.0"
description = "Transparent x-ray reflectivity calculations for multilayer thin films."
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
plot = ["matplotlib"]
fit = ["scikit-optimize"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
