[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swxps"
version = "0.1.0"
description = "Transparent x-ray reflectivity and standing-wave XPS tools for multilayer thin films."
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
plot = ["matplotlib"]
fit = ["scikit-optimize"]
jax = ["jax"]
gradient = ["jax", "scipy"]
least-squares = ["jax", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
