[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swanx"
version = "0.1.0"
description = "Standing-wave analysis for X-ray spectroscopy: multilayer reflectivity, SW-XPS, fitting, and diagnostics."
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
plot = ["matplotlib"]
fit = ["scikit-optimize"]
jax = ["jax"]
gradient = ["jax", "scipy"]
least-squares = ["jax", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
